--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ article {
     margin-left: auto;
     margin-right: auto;
     max-width: 70em;
+    font-family: pompiere;
+    font-size: 20px;
+    color: white;
+    background-color: black;
 }
 
 hr { 
