--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   padding: 10px;
-  font-family: pompiere;
+  font-family: 'pompiere';
   font-size: 20px;
   color: white;
   background-color: black;
