--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 /* More Somewhere Than Here */
 
+@font-face {
+    font-family: Pompiere-Regular;
+    src: url(font/Pompiere-Regular);
+}
+
+
 body {
   margin: 0;
   padding: 20px;
