--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* More Somewhere Than Here */
 
 @font-face {
-    font-family: Pompiere-Regular;
-    src: url(font/Pompiere-Regular);
+    font-family: 'Pompiere-Regular';
+    src: url(./css/font/Pompiere-Regular);
 }
 
 
