--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@
 
 @font-face {
     font-family: 'Pompiere-Regular';
-    src: url(./css/font/Pompiere-Regular);
+    src: url('Pompiere-Regular.otf');
 }
 
 
 body {
   margin: 0;
   padding: 20px;
-  font-family: 'pompiere';
+  font-family: 'Pompiere-Regular';
   font-size: 20px;
   color: white;
   background-color: black;
@@ -20,7 +20,7 @@ body {
 
 }
 h1, h2 {
-  font-family: 'pompiere', sans-serif;
+  font-family: 'Pompiere-Regular', sans-serif;
   font-size: 30px;
   color: white;
   background-color: black;
