--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   font-size: 20px;
   color: white;
   background-color: black;
-  background-image: url("https://media.giphy.com/media/ukqrCYJwevIPYae3Xa/giphy.gif");
+  background-image: url
   background-repeat: no-repeat;
   background-position: top;
 }
